--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                         <span class="precio center">$</span>
                     </div>
                     <div class="text-producto center">
-                        <p>q'ero chela</p>
+                        <p>aborigen</p>
                     </div>
                     <div class="description center">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
                     </div>
                     <div class="button-producto center">
                         <button onclick="location.href='producto/qerochela.html'">ordenar ahora</button>
@@ -99,7 +99,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="button-producto center">
-                        <button>ordenar ahora</button>
+                        <button onclick="location.href='producto/tantrica.html'">ordenar ahora</button>
                     </div>
                 </div>
                 <div class="grid item-producto">
@@ -108,13 +108,13 @@
                         <span class="precio center">$</span>
                     </div>
                     <div class="text-producto center">
-                        <p>q'ero chela</p>
+                        <p>luna de miel</p>
                     </div>
                     <div class="description center">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="button-producto center">
-                        <button>ordenar ahora</button>
+                        <button onclick="location.href='producto/qerochela-luna-miel.html'">ordenar ahora</button>
                     </div>
                 </div>
             </div>
