--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q'ero Chela Aborigen - Producto</title>
+    <title>Q'ero Chela Luna de Miel - Producto</title>
     <link rel="stylesheet" href="../css/producto_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,14 +44,14 @@
         <section class="ver-producto center">
             <article class="grid ver-producto-column-2">
                 <div class="producto-img center">
-                    <img src="../img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                    <img src="../img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
                 </div>
                 <div class="flex flex-column ver-producto-2">
                     <div class="producto-title">
-                        <h2>q'ero chela - aborigen</h2>
+                        <h2>q'ero chela - luna de miel</h2>
                     </div>
                     <div class="producto-text">
-                        <p>Es una cerveza fácil de beber con un suave dulzor inicial a caramelo y un toque de quedad tostada al final generado por sus 4 diferentes tipos de malta.</p>
+                        <p>Es una cerveza artesanal elaborada con miel de origen natural. Cada sorbo te envuelve en una experiencia que combina suavidad y dulzura.</p>
                     </div>
                     <div class="producto-precio">
                         pen 7.50
@@ -115,7 +115,7 @@
                         <p></p>
                     </div>
                     <div class="button-producto center">
-                        <button>ordenar ahora</button>
+                        <button onclick="location.href='qerochela-luna-miel.html'">ordenar ahora</button>
                     </div>
                 </div>
             </div>
