--- a/producto/tantrica.html
+++ b/producto/tantrica.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q'ero Chela Aborigen - Producto</title>
+    <title>Tántrica - Producto</title>
     <link rel="stylesheet" href="../css/producto_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,14 +44,14 @@
         <section class="ver-producto center">
             <article class="grid ver-producto-column-2">
                 <div class="producto-img center">
-                    <img src="../img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                    <img src="../img/Tantrica.png" alt="Tántrica">
                 </div>
                 <div class="flex flex-column ver-producto-2">
                     <div class="producto-title">
-                        <h2>q'ero chela - aborigen</h2>
+                        <h2>tántrica</h2>
                     </div>
                     <div class="producto-text">
-                        <p>Es una cerveza fácil de beber con un suave dulzor inicial a caramelo y un toque de quedad tostada al final generado por sus 4 diferentes tipos de malta.</p>
+                        <p>Es una cerveza orgánica elaborada con ingredientes afrodisiacos y técnicas ancestrales que te llevara una experiencia sensorial inigualabe.</p>
                     </div>
                     <div class="producto-precio">
                         pen 7.50
@@ -112,10 +112,10 @@
                         <p>luna de miel</p>
                     </div>
                     <div class="description center">
-                        <p></p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="button-producto center">
-                        <button>ordenar ahora</button>
+                        <button onclick="location.href='qerochela-luna-miel.html'">ordenar ahora</button>
                     </div>
                 </div>
             </div>
