--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -14,16 +14,16 @@
 <body>
     <header>
         <nav class="grid column-header">
-            <div class="flex title-logo">
-                <div class="center">
-                    <a href="../index.html">
+            <a href="../index.html">
+                <div class="flex title-logo">
+                    <div class="center">
                         <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
-                    </a>
+                    </div>
+                    <div class="center">
+                        <h1>Q'ERO CHELA</h1>
+                    </div>
                 </div>
-                <div class="center">
-                    <h1>Q'ERO CHELA</h1>
-                </div>
-            </div>
+            </a>
             <div class="flex navegation">
                 <ul class="flex gap5rem">    
                     <li class="center">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="flex flex-column ver-producto-2">
                     <div class="producto-title">
-                        <h2>q'ero chela - aborigen</h2>
+                        <h2>aborigen</h2>
                     </div>
                     <div class="producto-text">
                         <p>Es una cerveza fácil de beber con un suave dulzor inicial a caramelo y un toque de quedad tostada al final generado por sus 4 diferentes tipos de malta.</p>
@@ -82,7 +82,7 @@
                         <p>aborigen</p>
                     </div>
                     <div class="description center">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
                     </div>
                     <div class="button-producto center">
                         <button onclick="location.href='qerochela.html'">ordenar ahora</button>
@@ -97,7 +97,7 @@
                         <p>tántrica</p>
                     </div>
                     <div class="description center">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
                     </div>
                     <div class="button-producto center">
                         <button onclick="location.href='tantrica.html'">ordenar ahora</button>
@@ -112,10 +112,10 @@
                         <p>luna de miel</p>
                     </div>
                     <div class="description center">
-                        <p></p>
+                        <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
                     </div>
                     <div class="button-producto center">
-                        <button>ordenar ahora</button>
+                        <button onclick="location.href='qerochela-luna-miel.html'">ordenar ahora</button>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                     <h2>¿listo para pedir?</h2>
                 </div>
                 <div class="text-footer">
-                    <p>Lorem ipsum dolor sit ing elit. Repellat enda in eos quod dolorum fugiat distinctio est!</p>
+                    <p>Descubre el sabor perfecto para cada ocasión y vive una experiencia única. ¡Haz tu pedido ahora!</p>
                 </div>
                 <div class="button-footer">
                     <button>comprar</button>
@@ -154,7 +154,7 @@
                         <i class="fa-solid fa-phone center"></i>
                     </div>
                     <div class="center">
-                        <p>51 123456789</p>
+                        <p>+51 123456789</p>
                     </div>
                 </div>
                 <div class="flex title-email">
