--- a/index.html
+++ b/index.html
@@ -73,51 +73,57 @@
                 </div>
             </section>
             <div class="grid productos-column-3 center">
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                        <span class="precio center">$</span>
-                    </div>
-                    <div class="text-producto center">
-                        <p>aborigen</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='producto/qerochela.html'">ordenar ahora</button>
-                    </div>
-                </div>
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <img src="img/Tantrica.png" alt="Tantrica">
-                        <span class="precio center">$</span>
-                    </div>
-                    <div class="text-producto center">
-                        <p>tántrica</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='producto/tantrica.html'">ordenar ahora</button>
+                <div class="c1 center">
+                    <div class="grid item-producto center">
+                        <div class="img-producto center">
+                            <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                            <span class="precio center">$</span>
+                        </div>
+                        <div class="text-producto center">
+                            <p>aborigen</p>
+                        </div>
+                        <div class="description center">
+                            <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
+                        </div>
+                        <div class="button-producto center">
+                            <button onclick="location.href='producto/qerochela.html'">ordenar ahora</button>
+                        </div>
                     </div>
                 </div>
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                        <span class="precio center">$</span>
-                    </div>
-                    <div class="text-producto center">
-                        <p>luna de miel</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='producto/qerochela-luna-miel.html'">ordenar ahora</button>
+                <div class="c2 center">
+                    <div class="grid item-producto">
+                        <div class="img-producto center">
+                            <img src="img/Tantrica.png" alt="Tantrica">
+                            <span class="precio center">$</span>
+                        </div>
+                        <div class="text-producto center">
+                            <p>tántrica</p>
+                        </div>
+                        <div class="description center">
+                            <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
+                        </div>
+                        <div class="button-producto center">
+                            <button onclick="location.href='producto/tantrica.html'">ordenar ahora</button>
+                        </div>
                     </div>
                 </div>
+                <div class="c3 center">
+                    <div class="grid item-producto">
+                        <div class="img-producto center">
+                            <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
+                            <span class="precio center">$</span>
+                        </div>
+                        <div class="text-producto center">
+                            <p>luna de miel</p>
+                        </div>
+                        <div class="description center">
+                            <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
+                        </div>
+                        <div class="button-producto center">
+                            <button onclick="location.href='producto/qerochela-luna-miel.html'">ordenar ahora</button>
+                        </div>
+                    </div>
+                </div>                
             </div>
         </section>
     </main>
