--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="index.html">
                 <div class="flex title-logo">
                     <div class="center">
-                        <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </div>
                     <div class="center">
                         <h1>Q'ERO CHELA</h1>
@@ -73,7 +73,7 @@
                 </div>
             </section>
             <div class="grid productos-column-3 center">
-                <div class="c1 center">
+                <div class="center">
                     <div class="grid item-producto center">
                         <div class="img-producto center">
                             <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="c2 center">
+                <div class="center">
                     <div class="grid item-producto">
                         <div class="img-producto center">
                             <img src="img/Tantrica.png" alt="Tantrica">
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="c3 center">
+                <div class="center">
                     <div class="grid item-producto">
                         <div class="img-producto center">
                             <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
@@ -130,14 +130,14 @@
 
     <footer class="footer center">
         <div class="my-footer grid footer-column-2 center">
-            <div class="center">
-                <div class="title-footer ">
+            <div class="flex footer-flex flex-column">
+                <div class="title-footer center-footer ">
                     <h2>¿listo para pedir?</h2>
                 </div>
-                <div class="text-footer">
+                <div class="text-footer center-text-footer">
                     <p>Descubre el sabor perfecto para cada ocasión y vive una experiencia única. ¡Haz tu pedido ahora!</p>
                 </div>
-                <div class="button-footer">
+                <div class="button-footer center-footer">
                     <button>comprar</button>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                 <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
-        <div class="my-footer2 grid footer-column-2-2">
+        <div class="my-footer2 flex footer-column-2-2">
             <div class="flex flex-2"> 
                 <div class="flex title-logo">
                     <div class="center">
