--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -124,14 +124,14 @@
 
     <footer class="footer center">
         <div class="my-footer grid footer-column-2 center">
-            <div class="center">
-                <div class="title-footer ">
+            <div class="flex footer-flex flex-column">
+                <div class="title-footer center-footer ">
                     <h2>¿listo para pedir?</h2>
                 </div>
-                <div class="text-footer">
+                <div class="text-footer center-text-footer">
                     <p>Descubre el sabor perfecto para cada ocasión y vive una experiencia única. ¡Haz tu pedido ahora!</p>
                 </div>
-                <div class="button-footer">
+                <div class="button-footer center-footer">
                     <button>comprar</button>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                 <img src="../img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
-        <div class="my-footer2 grid footer-column-2-2">
+        <div class="my-footer2 flex footer-column-2-2">
             <div class="flex flex-2"> 
                 <div class="flex title-logo">
                     <div class="center">
