--- a/producto/tantrica.html
+++ b/producto/tantrica.html
@@ -42,7 +42,7 @@
 
     <main>
         <section class="ver-producto center">
-            <article class="grid ver-producto-column-2">
+            <article class="grid ver-producto-column-2 center">
                 <div class="producto-img center">
                     <img src="../img/Tantrica.png" alt="Tántrica">
                 </div>
@@ -73,49 +73,55 @@
                 </div>
             </section>
             <div class="grid productos-column-3 center">
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <img src="../img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                        <span class="precio center">$</span>
-                    </div>
-                    <div class="text-producto center">
-                        <p>aborigen</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='qerochela.html'">ordenar ahora</button>
-                    </div>
-                </div>
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <img src="../img/Tantrica.png" alt="Tantrica">
-                        <span class="precio center">$</span>
-                    </div>
-                    <div class="text-producto center">
-                        <p>tántrica</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='tantrica.html'">ordenar ahora</button>
+                <div class="center">
+                    <div class="grid item-producto center">
+                        <div class="img-producto center">
+                            <img src="../img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                            <span class="precio center">$</span>
+                        </div>
+                        <div class="text-producto center">
+                            <p>aborigen</p>
+                        </div>
+                        <div class="description center">
+                            <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
+                        </div>
+                        <div class="button-producto center">
+                            <button onclick="location.href='qerochela.html'">ordenar ahora</button>
+                        </div>
                     </div>
                 </div>
-                <div class="grid item-producto">
-                    <div class="img-producto center">
-                        <img src="../img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                        <span class="precio center">$</span>
+                <div class="center">
+                    <div class="grid item-producto center">
+                        <div class="img-producto center">
+                            <img src="../img/Tantrica.png" alt="Tantrica">
+                            <span class="precio center">$</span>
+                        </div>
+                        <div class="text-producto center">
+                            <p>tántrica</p>
+                        </div>
+                        <div class="description center">
+                            <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
+                        </div>
+                        <div class="button-producto center">
+                            <button onclick="location.href='tantrica.html'">ordenar ahora</button>
+                        </div>
                     </div>
-                    <div class="text-producto center">
-                        <p>luna de miel</p>
-                    </div>
-                    <div class="description center">
-                        <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
-                    </div>
-                    <div class="button-producto center">
-                        <button onclick="location.href='qerochela-luna-miel.html'">ordenar ahora</button>
+                </div>
+                <div class="center">
+                    <div class="grid item-producto center">
+                        <div class="img-producto center">
+                            <img src="../img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
+                            <span class="precio center">$</span>
+                        </div>
+                        <div class="text-producto center">
+                            <p>luna de miel</p>
+                        </div>
+                        <div class="description center">
+                            <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
+                        </div>
+                        <div class="button-producto center">
+                            <button onclick="location.href='qerochela-luna-miel.html'">ordenar ahora</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -124,14 +130,14 @@
 
     <footer class="footer center">
         <div class="my-footer grid footer-column-2 center">
-            <div class="center">
-                <div class="title-footer ">
+            <div class="flex footer-flex flex-column">
+                <div class="title-footer center-footer ">
                     <h2>¿listo para pedir?</h2>
                 </div>
-                <div class="text-footer">
+                <div class="text-footer center-text-footer">
                     <p>Descubre el sabor perfecto para cada ocasión y vive una experiencia única. ¡Haz tu pedido ahora!</p>
                 </div>
-                <div class="button-footer">
+                <div class="button-footer center-footer">
                     <button>comprar</button>
                 </div>
             </div>
@@ -139,7 +145,7 @@
                 <img src="../img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
-        <div class="my-footer2 grid footer-column-2-2">
+        <div class="my-footer2 flex footer-column-2-2">
             <div class="flex flex-2"> 
                 <div class="flex title-logo">
                     <div class="center">
