--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
                         <i class="fa-solid fa-phone center"></i>
                     </div>
                     <div class="center">
-                        <p>+51 123456789</p>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!">
+                           +51 935 287 218 
+                        </a>
                     </div>
                 </div>
                 <div class="flex title-email">
@@ -168,19 +170,27 @@
                         <i class="fa-solid fa-envelope"></i>
                     </div>
                     <div class="center">
-                        <p>inalcorpsacgmail.com</p>
+                        <a href="mailto:Nilozav96@gmail.com?Subject=Aquí%20el%20asunto%20del%20mail">
+                            Nilozav96@gmail.com
+                        </a>
                     </div>
                 </div>
                 <div class="flex social-media gap-footer">
-                    <div class="social center">
-                        <i class="fa-brands fa-facebook"></i>
-                    </div>
-                    <div class="social center">
-                        <i class="fa-brands fa-instagram"></i>
-                    </div>
-                    <div class="social center">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </div>
+                    <a href="https://www.facebook.com/profile.php?id=61573955267865" class="social-enlace" target="_blank">
+                        <div class="social center">
+                            <i class="fa-brands fa-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="https://www.instagram.com/qerochela?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                        <div class="social center">
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>
+                    </a>
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
+                        <div class="social center">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="grid footer-column-3 gap-footer-2">
