--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>   
 </head>
 <body>
-    <header>
+    <header id="qerochela">
         <nav class="grid column-header">
             <a href="index.html">
                 <div class="flex title-logo">
@@ -24,10 +24,14 @@
                     </div>
                 </div>
             </a>
-            <div class="flex navegation">
-                <ul class="flex gap5rem">    
+            <div class="flex navegation center-nav">
+                <input type="checkbox" id="burgercheck">
+                <label for="burgercheck" class="burger-icon">
+                    <i class="fa-solid fa-bars"></i>
+                </label>
+                <ul class="flex gap5rem flex-row-2">    
                     <li class="center">
-                        <a href="#">Productos</a>
+                        <a href="#productos">Productos</a>
                     </li>
                     <li class="center">
                         <a href="#">Nosotros</a>
@@ -63,13 +67,13 @@
                 </div>
             </article>
         </section>
-        <section class="productos">
+        <section class="productos" id="productos">
             <section class="center">
                 <div class="center">
                     <h2 class="title-section">nuestros productos</h2>
                 </div>
                 <div class="center">
-                    <p class="text-section">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="text-section">Cerveza artesanal con identidad. Sabor que cuenta una historia.</p>
                 </div>
             </section>
             <div class="grid productos-column-3 center">
@@ -138,7 +142,7 @@
                     <p>Descubre el sabor perfecto para cada ocasión y vive una experiencia única. ¡Haz tu pedido ahora!</p>
                 </div>
                 <div class="button-footer center-footer">
-                    <button>comprar</button>
+                    <button onclick="location.href='https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!'">comprar</button>
                 </div>
             </div>
             <div class="img-footer">
@@ -177,17 +181,17 @@
                 </div>
                 <div class="flex social-media gap-footer">
                     <a href="https://www.facebook.com/profile.php?id=61573955267865" class="social-enlace" target="_blank">
-                        <div class="social center">
+                        <div class="social social-f center">
                             <i class="fa-brands fa-facebook"></i>
                         </div>
                     </a>
                     <a href="https://www.instagram.com/qerochela?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-                        <div class="social center">
+                        <div class="social social-i center">
                             <i class="fa-brands fa-instagram"></i>
                         </div>
                     </a>
                     <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
-                        <div class="social center">
+                        <div class="social social-w center">
                             <i class="fa-brands fa-whatsapp"></i>
                         </div>
                     </a>
@@ -205,7 +209,7 @@
                 <div class="flex flex-2">
                     <h2>Productos</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="">Q'ero Chela</a>
+                        <a href="#qerochela">Q'ero Chela</a>
                         <a href="">Tantrica</a>
                     </div>
                 </div>
