--- a/index.html
+++ b/index.html
@@ -29,14 +29,26 @@
                 <label for="burgercheck" class="burger-icon">
                     <i class="fa-solid fa-bars"></i>
                 </label>
-                <ul class="flex gap5rem flex-row-2">    
-                    <li class="center">
+                <ul class="flex gap5rem flex-row-2">
+                    <li class="logo-burger">
+                        <a href="index.html">
+                            <div class="flex">
+                                <div class="center logo-burger-img">
+                                    <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                </div>
+                                <div class="center logo-burger-text">
+                                    <h1>Q'ERO CHELA</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </li>    
+                    <li class="center burger-center">
                         <a href="#productos">Productos</a>
                     </li>
-                    <li class="center">
+                    <li class="center burger-center">
                         <a href="#">Nosotros</a>
                     </li>
-                    <li class="center">
+                    <li class="center burger-center">
                         <a href="#">Contactos</a>
                     </li>
                 </ul>
@@ -59,7 +71,9 @@
                 </div>
                 <div class="grid cat-subcolumn-2">
                     <div class="item-img2">
-                        <img src="img/Publicidad2.png" alt="Publicidad 2">
+                        <a href="https://tantrica.pe/" target="_blank">
+                            <img src="img/Publicidad2.png" alt="Publicidad 2">
+                        </a>
                     </div>
                     <div class="item-img2">
                         <img src="img/Publicidad3.png" alt="Publicidad 3">
@@ -210,7 +224,7 @@
                     <h2>Productos</h2>
                     <div class="flex flex-2 gap-footer-3">
                         <a href="#qerochela">Q'ero Chela</a>
-                        <a href="">Tantrica</a>
+                        <a href="https://tantrica.pe/" target="_blank">Tantrica</a>
                     </div>
                 </div>
                 <div class="flex flex-2">
