--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -29,14 +29,26 @@
                 <label for="burgercheck" class="burger-icon">
                     <i class="fa-solid fa-bars"></i>
                 </label>
-                <ul class="flex gap5rem flex-row-2">    
-                    <li class="center">
+                <ul class="flex gap5rem flex-row-2"> 
+                    <li class="logo-burger">
+                        <a href="../index.html">
+                            <div class="flex">
+                                <div class="center logo-burger-img">
+                                    <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                </div>
+                                <div class="center logo-burger-text">
+                                    <h1>Q'ERO CHELA</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </li>       
+                    <li class="center burger-center">
                         <a href="#productos">Productos</a>
                     </li>
-                    <li class="center">
+                    <li class="center burger-center">
                         <a href="#">Nosotros</a>
                     </li>
-                    <li class="center">
+                    <li class="center burger-center">
                         <a href="#">Contactos</a>
                     </li>
                 </ul>
