--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         <section class="categorias center">
             <article class="grid cat-column-2">
                 <div class="item-img">
-                    <img src="img/Publicidad1.png" alt="Publicidad 1">
+                    <a href="producto/qerochela.html">
+                        <img src="img/Publicidad1.png" alt="Publicidad 1">
+                    </a>
                 </div>
                 <div class="grid cat-subcolumn-2">
                     <div class="item-img2">
@@ -76,7 +78,9 @@
                         </a>
                     </div>
                     <div class="item-img2">
-                        <img src="img/Publicidad3.png" alt="Publicidad 3">
+                        <a href="producto/qerochela-luna-miel.html">
+                            <img src="img/Publicidad3.png" alt="Publicidad 3">
+                        </a>
                     </div>
                 </div>
             </article>
@@ -95,7 +99,7 @@
                     <div class="grid item-producto center">
                         <div class="img-producto center">
                             <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                            <span class="precio center">$</span>
+                            <span class="precio center">S/.</span>
                         </div>
                         <div class="text-producto center">
                             <p>aborigen</p>
@@ -112,7 +116,7 @@
                     <div class="grid item-producto">
                         <div class="img-producto center">
                             <img src="img/Tantrica.png" alt="Tantrica">
-                            <span class="precio center">$</span>
+                            <span class="precio center">S/.</span>
                         </div>
                         <div class="text-producto center">
                             <p>tántrica</p>
@@ -129,7 +133,7 @@
                     <div class="grid item-producto">
                         <div class="img-producto center">
                             <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                            <span class="precio center">$</span>
+                            <span class="precio center">S/.</span>
                         </div>
                         <div class="text-producto center">
                             <p>luna de miel</p>
