--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -92,7 +92,7 @@
                 <div class="grid item-producto">
                     <div class="img-producto center">
                         <img src="../img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                        <span class="precio center">$</span>
+                        <span class="precio center">S/.</span>
                     </div>
                     <div class="text-producto center">
                         <p>aborigen</p>
@@ -107,7 +107,7 @@
                 <div class="grid item-producto">
                     <div class="img-producto center">
                         <img src="../img/Tantrica.png" alt="Tantrica">
-                        <span class="precio center">$</span>
+                        <span class="precio center">S/.</span>
                     </div>
                     <div class="text-producto center">
                         <p>tántrica</p>
@@ -122,7 +122,7 @@
                 <div class="grid item-producto">
                     <div class="img-producto center">
                         <img src="../img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                        <span class="precio center">$</span>
+                        <span class="precio center">S/.</span>
                     </div>
                     <div class="text-producto center">
                         <p>luna de miel</p>
