--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -93,7 +93,7 @@
                 <div class="grid item-producto">
                     <div class="img-producto center">
                         <img src="../img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                        <span class="precio center">$</span>
+                        <span class="precio center">S/.</span>
                     </div>
                     <div class="text-producto center">
                         <p>aborigen</p>
@@ -108,7 +108,7 @@
                 <div class="grid item-producto">
                     <div class="img-producto center">
                         <img src="../img/Tantrica.png" alt="Tantrica">
-                        <span class="precio center">$</span>
+                        <span class="precio center">S/.</span>
                     </div>
                     <div class="text-producto center">
                         <p>tántrica</p>
@@ -123,7 +123,7 @@
                 <div class="grid item-producto">
                     <div class="img-producto center">
                         <img src="../img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                        <span class="precio center">$</span>
+                        <span class="precio center">S/.</span>
                     </div>
                     <div class="text-producto center">
                         <p>luna de miel</p>
