--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -49,7 +49,9 @@
                         <a href="#">Nosotros</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="#">Contactos</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
+                            Contactos
+                        </a>
                     </li>
                 </ul>
             </div>
