--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -118,7 +118,7 @@
                         <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
                     </div>
                     <div class="button-producto center">
-                        <button onclick="location.href='tantrica.html'">ordenar ahora</button>
+                        <button onclick="location.href='https://tantrica.pe/'">ordenar ahora</button>
                     </div>
                 </div>
                 <div class="grid item-producto">
