--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
                         </div>
                         <div class="button-producto center">
-                            <button onclick="location.href='producto/tantrica.html'">ordenar ahora</button>
+                            <button onclick="location.href='https://tantrica.pe/'">ordenar ahora</button>
                         </div>
                     </div>
                 </div>
