--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -183,8 +183,8 @@
                         <i class="fa-solid fa-envelope"></i>
                     </div>
                     <div class="center">
-                        <a href="mailto:Nilozav96@gmail.com?Subject=Aquí%20el%20asunto%20del%20mail">
-                            Nilozav96@gmail.com
+                        <a href="mailto:ventas@qerochela.com?Subject=Aquí%20el%20asunto%20del%20mail">
+                            ventas@qerochela.com
                         </a>
                     </div>
                 </div>
