--- a/index.html
+++ b/index.html
@@ -60,11 +60,9 @@
 
     <main class="container">
         <section class="banner">
-            <article>
-                <div class="banner-img">
-                    <img src="img/Banner.png" alt="Banner">
-               </div>
-            </article>
+            <div class="banner-img">
+                <img src="img/Banner.png" alt="Banner">
+            </div>
         </section>
         <section class="categorias center">
             <article class="grid cat-column-2">
@@ -200,17 +198,17 @@
                     </div>
                 </div>
                 <div class="flex social-media gap-footer">
-                    <a href="https://www.facebook.com/profile.php?id=61573955267865" class="social-enlace" target="_blank">
+                    <a href="https://www.facebook.com/profile.php?id=61573955267865" class="center" target="_blank">
                         <div class="social social-f center">
                             <i class="fa-brands fa-facebook"></i>
                         </div>
                     </a>
-                    <a href="https://www.instagram.com/qerochela?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <a href="https://www.instagram.com/qerochela?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="center" target="_blank">
                         <div class="social social-i center">
                             <i class="fa-brands fa-instagram"></i>
                         </div>
                     </a>
-                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" class="center" target="_blank">
                         <div class="social social-w center">
                             <i class="fa-brands fa-whatsapp"></i>
                         </div>
